--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -4,8 +4,48 @@
 
  <div class="col-lg-10 col-md-4" > 
       
-     <div id=myCarousel class="carousel slide" data-ride="carousel">
-       <!--Indicators -->
+   
+<carousel>
+  <slide>
+    <div class="mobile-image"> <img src="assets/blank-transparent.png" alt="first slide" >
+    </div><div class="carousel-caption d-none d-md-block dark">
+      <div class="shopu-content">  
+         Welcome to Shopfu
+         </div> 
+      </div>
+  </slide>
+  <slide>
+    <div class="mobile-image">   <img src="assets/mobile-wire-small.png" alt="second slide">
+    </div>
+      <div class="carousel-caption d-none d-md-block dark">
+      <div class="mobile-content">  
+          Search for Your Gadgets 
+         </div> 
+     </div>
+  
+  </slide>
+  <slide>
+   <div class="apparrel-image"> <img src="assets/apparrel.png" alt="third slide" >
+   </div> <div class="carousel-caption d-none d-md-block dark">
+      <div class="apparrel-content">  
+         Search for Apparrels 
+        </div>  
+        
+  </div> 
+  </slide>
+  <slide>
+    <div class="accessory-image"><img src="assets/accessory.png" alt="third slide">
+    </div><div class="carousel-caption d-none d-md-block dark">
+      <div class="accessory-content">   
+         Search for Accessories
+       </div>  
+  </div> 
+  </slide>
+</carousel>
+
+
+
+  <!--   <div id=myCarousel class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
            <li data-target="#myCarousel" data-slide-to="1"  ></li>
@@ -68,7 +108,7 @@
               </div> 
             </div>
           </div>
-        <!-- Left and right controls -->
+          Left and right controls  
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
     <span class="sr-only">Previous</span>
@@ -77,7 +117,7 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
   </a>
-     </div>
+     </div> -->
      
   </div>
 
