Added Job positing Component Reference

--- a/src/app/home/advert/job-position.component.html
+++ b/src/app/home/advert/job-position.component.html
@@ -1,4 +1,4 @@
-<div class="col-form-sm-label">
+<div class="col-form-sm-label post">
     <h3>{{data.title}}</h3>
     <h5><i class="fa fa-fw fa-building-0"> </i> {{data.client}} </h5>
     <ul> 
